--- a/ms-cars/src/main/resources/application.properties
+++ b/ms-cars/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
-spring.data.mongodb.database=cars_db
+spring.data.mongodb.database=compass_challenge_III
