--- a/ms-races/src/main/resources/application.properties
+++ b/ms-races/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=compass_challenge_III
 
 server.port = 8090
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
